--- a/src/managers/SplineManager/styles.module.scss
+++ b/src/managers/SplineManager/styles.module.scss
@@ -1,22 +1,23 @@
-.scroll_container {
-    position: relative;
-  }
-  
-  .gradient_mask {
-    position: relative;
-    padding-bottom: 8px; /* Adjust padding as needed */
-    
-    /* Opacity mask from top to center to bottom */
-    mask-image: linear-gradient(to bottom, 
-                rgba(0, 0, 0, 0),  
-                rgba(0, 0, 0, 1) 15%,  
-                rgba(0, 0, 0, 1) 85%,  
-                rgba(0, 0, 0, 0) 100%); 
-                
-    /* For WebKit browsers */
-    -webkit-mask-image: linear-gradient(to bottom, 
-                rgba(0, 0, 0, 0),   
-                rgba(0, 0, 0, 1) 15%,  
-                rgba(0, 0, 0, 1) 85%,  
-                rgba(0, 0, 0, 0) 100%); 
-  }
+.scrollContainer {
+  position: relative;
+}
+
+.gradientMask {
+  position: relative;
+  padding-bottom: 8px;
+  /* Adjust padding as needed */
+
+  /* Opacity mask from top to center to bottom */
+  mask-image: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1) 15%,
+      rgba(0, 0, 0, 1) 85%,
+      rgba(0, 0, 0, 0) 100%);
+
+  /* For WebKit browsers */
+  -webkit-mask-image: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1) 15%,
+      rgba(0, 0, 0, 1) 85%,
+      rgba(0, 0, 0, 0) 100%);
+}
