fixed and stuff

--- a/src/globals.css
+++ b/src/globals.css
@@ -83,6 +83,11 @@
   --label-quaternary: var(--color-neutral-700);
 }
 
+.clipCorners {
+  clip-path: inset(0 round 1rem);
+}
+
+
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
