rawObject missing fixed

--- a/src/components/ui/Tree/s.module.scss
+++ b/src/components/ui/Tree/s.module.scss
@@ -8,6 +8,7 @@
             position: absolute;
             top: 0;
             width: 1px;
+            min-width: 1px;
             height: 100%;
         }
         .groupVerticalLine {
